Revision history for {{$dist->name}}

{{$NEXT}}

1.004002 2014-11-01T11:43:22Z dc767c8
 [Bugfix]
 - Require a version of Test::More with a useable subtest.

 [Dependencies::Stats]
 - Dependencies changed since 1.004001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: ↑1
 - test: ↑1

1.004001 2014-10-30T12:56:17Z cab1d68
 [Bugfix]
 - Soften DPath dependency till upstream can fix it for 5.8

 [Dependencies::Stats]
 - Dependencies changed since 1.004000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +4 -1 (recommends: +1, suggests: ↑2)
 - runtime: -1 (recommends: +1 ↑1)
 - test: +1 (recommends: ↑2)

1.004000 2014-10-12T15:44:27Z b3d5941
 [Dependencies::Stats]
 - Dependencies changed since 1.003003, see misc/*.deps* for details
 - develop: +3 ↑1 (suggests: ↑1)
 - runtime: +1
 - test: +1

 [Features]
 - dztest now has ->run_command() proxy for DZ:App::Tester::test_dzil

1.003003 2014-09-28T07:27:06Z
 [Bugfix]
 - spew_raw to avoid \r\n translation on Win32

 [Dependencies::Stats]
 - Dependencies changed since 1.003002, see misc/*.deps* for details
 - develop: (suggests: ↑1)

1.003002 2014-09-07T09:07:01Z
 [00 Bugfix]
 - Warn and auto-wrap $expected in meta_path_deeply to avoid other instances of
   kentnl/Dist-Zilla-Plugin-Prereqs-MatchInstalled#3

 [Dependencies::Stats]
 - Dependencies changed since 1.003001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: (recommends: ↑1)
 - test: (recommends: ↑1)

1.003001 2014-08-29T09:27:43Z
 [00 Bugfix]
 - Make sure failing to create a build dir is handled properly

 [Dependencies::Stats]
 - Dependencies changed since 1.003000, see misc/*.deps* for details
 - runtime: ↑1

1.003000 2014-08-29T07:46:22Z
 [00 Minor]
 - Add create_plugin utility.
 - Test enhancements.

 [Dependencies::Stats]
 - Dependencies changed since 1.002000, see misc/*.deps* for details
 - runtime: +2

 [Tests]
 - Test coverage improved.

1.002000 2014-08-22T17:40:28Z
 [00 Minor]