@@ -204,8 +204,10 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 [Prereqs]
 Path::Tiny = 0.050
 
-[Prereqs::Soften]
-to_relationship = recommends
-copy_to = develop.requires
-module = Test::Differences
-module = Data::DPath
+[Prereqs / RuntimeRecommends]
+Test::Differences = 0
+Data::DPath = 0
+
+[Prereqs / DevelopRequires]
+Test::Differences = 0
+Data::DPath = 0
