@@ -1,6 +1,8 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 1.004003
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::Prereqs::Soften
 
 1.004002 2014-11-01T11:43:22Z
  [Changed / develop suggests]
